--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "wasm-karas",
-  "version": "1.0.0",
-  "dependencies": {
-    "hpm": "^9.5.0"
-  },
+  "version": "0.86.0",
+  "dependencies": {},
   "scripts": {
     "build": "wasm-pack build --target web"
   },
